--- a/locales/de.csv
+++ b/locales/de.csv
@@ -27,7 +27,7 @@ System_Info,Systeminfo
 Use_system_setting,Systemeinstellungen verwenden
 Create_desktop_shortcut,Desktop-Verknüpfung erstellen
 Reset_preferences,Einstellungen zurücksetzen
-Reopen_itt_again.,Bitte ITT erneut öffnen.
+Reopen_itt_again,Bitte ITT erneut öffnen.
 Theme,Thema
 Language,Sprache
 MAS,Microsoft Aktivierungsskripte (MAS)
