--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -27,7 +27,7 @@ System_Info,Infos système
 Use_system_setting,Utiliser les paramètres système
 Create_desktop_shortcut,Créer un raccourci sur le bureau
 Reset_preferences,Réinitialiser les préférences
-Reopen_itt_again.,Veuillez rouvrir ITT.
+Reopen_itt_again,Veuillez rouvrir ITT.
 Theme,Thème
 Language,Langue
 MAS,Scripts d'activatiOn Microsoft (MAS)
