--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -27,7 +27,7 @@ System_Info,Информация о системе
 Use_system_setting,Использовать системные настройки
 Create_desktop_shortcut,Создать ярлык на рабочем столе
 Reset_preferences,Сбросить настройки
-Reopen_itt_again.,Пожалуйста перезапустите ITT.
+Reopen_itt_again,Пожалуйста перезапустите ITT.
 Theme,Тема
 Language,Язык
 MAS,Microsoft ActivatiOn Scripts (MAS)
