--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -27,7 +27,7 @@ System_Info,Sistem Bilgisi
 Use_system_setting,Sistem ayarlarını kullan
 Create_desktop_shortcut,MASaüstü kısayolu oluştur
 Reset_preferences,Tercihleri sıfırla
-Reopen_itt_again.,Lütfen ITT'yi tekrar açın.
+Reopen_itt_again,Lütfen ITT'yi tekrar açın.
 Theme,Tema
 Language,Dil
 MAS,Microsoft Etkinleştirme Betikleri (MAS)
