--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -9,6 +9,7 @@ Networks,شبكات
 Apps_features,التطبيقات و الميزات
 Task_Manager,مدير المهام
 Disk_Managment,إدارة القرص
+Msconfig,تكوين النظام
 Install,تثبيت
 Apply,تطبيق
 Downloading,...جارٍ التحميل
