--- a/locales/de.csv
+++ b/locales/de.csv
@@ -17,6 +17,7 @@ Music,Musik
 On,"Ein "
 Off,Aus
 Disk_Managment,Datenträgerverwaltung
+Msconfig,Systemkonfiguration
 Task_Manager,Task-Manager
 Apps_features,Apps-FunktiOnen
 Networks,Netzwerke
