--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -17,6 +17,7 @@ Music,Musique
 On,"Activé "
 Off,Désactivé
 Disk_Managment,GestiOn des disques
+Msconfig,Configuration du système
 Task_Manager,GestiOnnaire des tâches
 Apps_features,ApplicatiOns-FOnctiOnnalités
 Networks,Réseaux
