--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -17,6 +17,7 @@ Music,Ceol
 On,"Ar "
 Off,Múchta
 Disk_Managment,Bainistíocht Diosca
+Msconfig,Cumraíocht an Chórais
 Task_Manager,Bainisteoir Tascanna
 Apps_features,Gnéithe Aipeanna
 Networks,LíOnraí
