--- a/locales/it.csv
+++ b/locales/it.csv
@@ -17,6 +17,7 @@ Music,Musica,
 On,"Acceso ",
 Off,Spento,
 Disk_Managment,Gestione disco,
+Msconfig,Configurazione di sistema,
 Task_Manager,Gestore attività,
 Apps_features,App-Funzionalità,
 Networks,Reti,
