--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -17,6 +17,7 @@ Music,Музыка
 On,"Вкл "
 Off,Выкл
 Disk_Managment,Управление дисками
+Msconfig,Конфигурация системы
 Task_Manager,Диспетчер задач
 Apps_features,Приложения-Функции
 Networks,Сети
