--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -17,6 +17,7 @@ Music,Müzik
 On,"Açık "
 Off,Kapalı
 Disk_Managment,Disk Yönetimi
+Msconfig,Sistem Yapılandırması
 Task_Manager,Görev Yöneticisi
 Apps_features,Uygulamalar-Özellikler
 Networks,Ağlar
