--- a/locales/en.csv
+++ b/locales/en.csv
@@ -1,6 +1,6 @@
 Key,Text
 name,English
-Welcome,Save time by install multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better. You can also add your favorite Music  Apps  and Tweaks.
+Welcome,Save time by install multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better add Apps/Tweaks and favorite music and more. 
 Install,Install
 Apply,Apply
 Downloading,Downloading...
@@ -14,7 +14,7 @@ Settings,Settings
 Save,Save
 Restore,Restore
 Music,Music
-On,"On"
+On,On
 Off,Off
 Disk_Managment,Disk Managment
 Msconfig,System Configuration
