--- a/locales/en.csv
+++ b/locales/en.csv
@@ -1,6 +1,6 @@
 Key,Text
 name,English
-Welcome,Save time by install multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better add Apps/Tweaks and favorite music and more. 
+Welcome,Save time by install multiple programs at Once and boost your Windows performance. Join us in improving this tool and making it better add Apps/Tweaks favorite music and more. 
 Install,Install
 Apply,Apply
 Downloading,Downloading...
