--- a/locales/en.csv
+++ b/locales/en.csv
@@ -19,7 +19,7 @@ Off,Off
 Disk_Managment,Disk Managment
 Msconfig,System Configuration
 Task_Manager,Task Manager
-Apps_features,Apps-Features
+Apps_features,Programs and Features
 Networks,Networks
 Services,Services
 Device_Manager,Device Manager
