--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -10,11 +10,12 @@ Apps_features,التطبيقات و الميزات
 Task_Manager,مدير المهام
 Disk_Managment,إدارة القرص
 Msconfig,تكوين النظام
+Environment_Variables,متغيرات بيئة النظام
 Install,تثبيت
 Apply,تطبيق
 Downloading,...جارٍ التحميل
 About,عن الاداة
-Third_party,روابط خارجية
+Third_party,ادوات اخرى
 Preferences,التفضيلات
 Management,إدارة الجهاز
 Apps,برامج
