--- a/locales/de.csv
+++ b/locales/de.csv
@@ -18,6 +18,7 @@ On,"Ein "
 Off,Aus
 Disk_Managment,Datenträgerverwaltung
 Msconfig,Systemkonfiguration
+Environment_Variables,Umgebungsvariablen
 Task_Manager,Task-Manager
 Apps_features,Apps-FunktiOnen
 Networks,Netzwerke
