--- a/locales/en.csv
+++ b/locales/en.csv
@@ -18,6 +18,7 @@ On,On
 Off,Off
 Disk_Managment,Disk Managment
 Msconfig,System Configuration
+Environment_Variables,Environment Variables
 Task_Manager,Task Manager
 Apps_features,Programs and Features
 Networks,Networks
