--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -18,6 +18,7 @@ On,"Activé "
 Off,Désactivé
 Disk_Managment,GestiOn des disques
 Msconfig,Configuration du système
+Environment_Variables,Variables d'environnement
 Task_Manager,GestiOnnaire des tâches
 Apps_features,ApplicatiOns-FOnctiOnnalités
 Networks,Réseaux
