--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -18,6 +18,7 @@ On,"Ar "
 Off,Múchta
 Disk_Managment,Bainistíocht Diosca
 Msconfig,Cumraíocht an Chórais
+Environment_Variables,Variables d'environnement
 Task_Manager,Bainisteoir Tascanna
 Apps_features,Gnéithe Aipeanna
 Networks,LíOnraí
