--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -18,6 +18,7 @@ On,"चालू "
 Off,बंद
 Disk_Managment,डिस्क प्रबंधन
 Msconfig,सिस्टम कॉन्फ़िगरेशन
+Environment_Variables,एन्विर्बल वार्डियल्स
 Task_Manager,टास्क मैनेजर
 Apps_features,ऐप्स-फीचर्स
 Networks,नेटवर्क्स
