--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -10,6 +10,7 @@ Apps_features,앱 기능
 Task_Manager,작업 관리자
 Disk_Managment,디스크 관리
 Msconfig,시스템 구성
+Environment_Variables,연습별 변수
 Install,설치
 Apply,적용
 Downloading,다운로드 중
