--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -18,6 +18,7 @@ On,"Açık "
 Off,Kapalı
 Disk_Managment,Disk Yönetimi
 Msconfig,Sistem Yapılandırması
+Environment_Variables,Ortam Değişkenleri
 Task_Manager,Görev Yöneticisi
 Apps_features,Uygulamalar-Özellikler
 Networks,Ağlar
