--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -10,6 +10,7 @@ Apps_features,应用特性
 Task_Manager,任务管理器
 Disk_Managment,磁盘管理
 Msconfig,系统配置
+Environment_Variables,环境变量
 Install,安装
 Apply,应用
 Downloading,下载中
