IDM Trail reset
repo
https://github.com/J2TEAM/idm-trial-reset

--- a/locales/en.csv
+++ b/locales/en.csv
@@ -34,7 +34,7 @@ Theme,Theme
 Language,Language
 MAS,Microsoft Activation Scripts (MAS)
 Win_Office,Windows / Office ISO (MAS)
-IDM,IDM Activation (WindowsAddict)
+IDM,IDM Activation (J2TEAM)
 Browsers_extensions,Browsers extensions
 All,All
 Search,Search
