--- a/locales/en.csv
+++ b/locales/en.csv
@@ -1,6 +1,6 @@
 Key,Text
 name,English
-Welcome,Save time and install all your programs at once and debloat windows. Be part of ITT—contribute to improving this tool with Apps/Tweaks — and more
+Welcome,Welcome, save time and install all your programs at once and debloat Windows and more. Be part of ITT and contribute to improving it.
 Install,Install
 Apply,Apply
 Downloading,Downloading...
