--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -1,6 +1,6 @@
 Key,Text
 name,عربي
-Welcome,توفر هذه الأداة تسهيلات كبيرة في عملية تثبيت البرامج وتحسين الاداء. انضم إلينا لتساهم في تطويرها وجعلها أكثر اكتمالًا
+Welcome,توفر هذه الأداة تسهيلات كبيرة في عملية تثبيت البرامج وتحسين الويندوز. انضم إلينا وكن جزءًا في تطويرها
 System_Info,معلومات النظام
 Power_Options,خيارات الطاقة
 Device_Manager,إدارة الأجهزة
