--- a/locales/es.csv
+++ b/locales/es.csv
@@ -51,3 +51,4 @@ Exit_msg,¿Estás seguro de que deseas cerrar el programa? Si hay instalaciOnes 
 Happy_birthday,¡Feliz cumpleaños a mí!
 My_playlist,Es mi cumpleaños y mi lista de reproducción ♪
 Empty_save_msg,Elige al menos una aplicación para guardarla.
+easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente, sé el primero en descubrir la función e intégrala en la herramienta.
