--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -51,3 +51,4 @@ Exit_msg,Êtes-vous sûr de vouloir fermer le programme ? Si des instAllatiOns s
 Happy_birthday,Joyeux anniversaire à moi !
 My_playlist,C'est mOn anniversaire et ma playlist ♪
 Empty_save_msg,Choisissez au moins une applicatiOn à sauvegarder.
+easter_egg, Peux-tu découvrir le secret caché ? Plonge dans le code source, sois le premier à découvrir la fonctionnalité et intègre-la dans l'outil.
