--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -51,3 +51,4 @@ Exit_msg,An bhfuil tú cinnte gur mhaith leat an clár a dhúnadh? Má tá suite
 Happy_birthday,Breithlá ShOna domsa!
 My_playlist,Is é mo Bhreithlá é agus Mo Phléaráca ♪
 Empty_save_msg,Roghnaigh ar a laghad aip amháin chun é a shábháil
+easter_egg, An féidir leat an rúndiamhair atá i bhfolach a nochtadh? Tum isteach sa chód foinse, bí an chéad duine a aimsíonn an gné agus é a chomhtháthú sa uirlis.
