--- a/locales/it.csv
+++ b/locales/it.csv
@@ -51,3 +51,4 @@ Exit_msg,Sei sicuro di voler chiudere il programma? Se ci sono installazioni in 
 Happy_birthday,Buon compleanno a me!
 My_playlist,È il mio compleanno e la mia playlist ♪
 Empty_save_msg,Scegli almeno un'app per salvarla.
+easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente, sii il primo a scoprire la funzionalità e integrala nello strumento.
