--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -51,3 +51,4 @@ Exit_msg,Вы уверены что хотите закрыть программ
 Happy_birthday,С Днем Рождения меня!
 My_playlist,Это мой день рождения и мой плейлист ♪
 Empty_save_msg,Выберите хотя бы одно приложение для сохранения.
+easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код, стань первым, кто обнаружит функцию, и интегрируй её в инструмент.
