--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -51,3 +51,4 @@ Exit_msg,Programı kapatmak istediğinizden emin misiniz? Herhangi bir kurulum v
 Happy_birthday,Kendime Mutlu Yıllar!
 My_playlist,Benim Doğum Günüm ve Benim Çalma Listem ♪
 Empty_save_msg,Kaydetmek için en az bir uygulama seçin.
+easter_egg, Gizli sırrı keşfedebilir misin? Kaynağa dal, özelliği ilk keşfeden ol ve araca entegre et.
