--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -53,3 +53,4 @@ Exit_msg,هل أنت متأكد من رغبتك في إغلاق البرنامج
 Happy_birthday,!عيد ميلاد سعيد عماد
 My_playlist,انه عيد ميلادي و قائمة الموسيقى الخاصة بي
 Empty_save_msg,يرجى اختيار تطبيق واحد على الاقل لحفظه
+easter_egg,تقدر تكتشف الميزة المخفية؟ تصفح الكود، وكن أول واحد يكتشف الميزة، ويضيفها للأداة
