--- a/locales/en.csv
+++ b/locales/en.csv
@@ -51,3 +51,4 @@ Exit_msg,Are you sure you want to close the program? Any ongoing installations w
 Happy_birthday,Happy Birthday to me!
 My_playlist,It's my Birthday and My Playlist ♪
 Empty_save_msg,Choose at least One app to save it
+easter_egg,Can you uncover the hidden secret? Dive into the source code, be the first to discover the feature, and integrate it into the tool
