--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -52,3 +52,4 @@ Last_update,마지막 업데이트
 Exit_msg,프로그램을 종료하시겠습니까? 진행 중인 설치가 있으면 중단됩니다.
 Happy_birthday,생일 축하합니다 Emad!
 My_playlist,제 생일과 제 플레이리스트 ♪
+easter_egg,隠された秘密を見つけられますか？ソースコードに飛び込んで、最初に機能を発見し、ツールに統合しましょう。
