--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -52,3 +52,4 @@ Last_update,最后更新
 Exit_msg,您确定要关闭程序吗？如果有任何安装正在进行，它们将被终止。
 Happy_birthday,生日快乐 Emad!
 My_playlist,这是我的生日和我的播放列表 ♪
+easter_egg, 你能发现隐藏的秘密吗？深入源代码，成为第一个发现功能的人，并将其集成到工具中。
