--- a/locales/it.csv
+++ b/locales/it.csv
@@ -44,4 +44,4 @@ Please_wait,Attendere un processo è in corso in background
 Last_update,Ultimo aggiornamento
 Exit_msg,Sei sicuro di voler chiudere il programma? Se ci sono installazioni in corso verranno terminate.
 Empty_save_msg,Scegli almeno un'app per salvarla.
-easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente sii il primo a scoprire la funzionalità e integrala nello strumento.
+easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente sii il primo a scoprire la funzionalità e integrala nello strumento
