--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -45,4 +45,4 @@ Applying,적용 중..
 Please_wait,배경에서 프로세스가 진행 중입니다. 잠시 기다려주세요.
 Last_update,마지막 업데이트
 Exit_msg,프로그램을 종료하시겠습니까? 진행 중인 설치가 있으면 중단됩니다.
-easter_egg,隠された秘密を見つけられますか？ソースコードに飛び込んで、最初に機能を発見し、ツールに統合しましょう。
+easter_egg,隠された秘密を見つけられますか？ソースコードに飛び込んで、最初に機能を発見し、ツールに統合しましょう
