--- a/locales/es.csv
+++ b/locales/es.csv
@@ -44,4 +44,4 @@ Please_wait,Por favorespera un proceso se está ejecutando en segundo plano.
 Last_update,Última actualización
 Exit_msg,¿Estás seguro de que deseas cerrar el programa? Si hay instalaciOnes se interrumpirán.
 Empty_save_msg,Elige al menos una aplicación para guardarla.
-easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente sé el primero en descubrir la función e intégrala en la herramienta.
+easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente sé el primero en descubrir la función e intégrala en la herramienta
