--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -44,4 +44,4 @@ Please_wait,Fan le do thoil tá próiseas ag rith sa chúlra
 Last_update,An nuashOnrú deireanach
 Exit_msg,An bhfuil tú cinnte gur mhaith leat an clár a dhúnadh? Má tá suiteálacha ar siúl beidh siad curtha ar ceal.
 Empty_save_msg,Roghnaigh ar a laghad aip amháin chun é a shábháil
-easter_egg, An féidir leat an rúndiamhair atá i bhfolach a nochtadh? Tum isteach sa chód foinse bí an chéad duine a aimsíonn an gné agus é a chomhtháthú sa uirlis.
+easter_egg, An féidir leat an rúndiamhair atá i bhfolach a nochtadh? Tum isteach sa chód foinse bí an chéad duine a aimsíonn an gné agus é a chomhtháthú sa uirlis
