--- a/locales/en.csv
+++ b/locales/en.csv
@@ -42,8 +42,6 @@ Apply_msg,Are you sure you want to apply the following Tweak(s)
 Applying,Applying...
 Please_wait,Please wait a process is running in the background
 Last_update,Last update
-Exit_msg,Are you sure you want to close the program? Any ongoing installations will be canceled.
-Happy_birthday,Happy Birthday to me!
-My_playlist, Its my Birthday and My Playlist ♪
+Exit_msg,Are you sure you want to close the program? Any ongoing installations will be canceled
 Empty_save_msg,Choose at least One app to save it
 easter_egg,Can you uncover the hidden secret? Dive into the source code, be the first to discover the feature, and integrate it into the tool
