--- a/locales/en.csv
+++ b/locales/en.csv
@@ -44,4 +44,4 @@ Please_wait,Please wait a process is running in the background
 Last_update,Last update
 Exit_msg,Are you sure you want to close the program? Any ongoing installations will be canceled
 Empty_save_msg,Choose at least One app to save it
-easter_egg,Can you uncover the hidden secret? Dive into the source code, be the first to discover the feature, and integrate it into the tool
+easter_egg,Can you uncover the hidden secret? Dive into the source code be the first to discover the feature and integrate it into the tool
