--- a/locales/de.csv
+++ b/locales/de.csv
@@ -43,7 +43,5 @@ Applying,Anwenden...
 Please_wait,Bitte warten ein Prozess läuft im Hintergrund.
 Last_update,Letztes Update
 Exit_msg,Sind Sie sicher dass Sie das Programm schließen möchten? Alle InstAllatiOnen werden abgebrochen.
-Happy_birthday,Alles Gute zum Geburtstag mir!
-My_playlist,Es ist mein Geburtstag und meine Playlist ♪
-Empty_save_msg,Wählen Sie mindestens eine App zum Speichern aus.
-easter_egg, Kannst du das verborgene Geheimnis entdecken? Tauche in den Quellcode ein, sei der erste, der die Funktion entdeckt, und integriere sie in das Tool.
+Empty_save_msg,Wählen Sie mindestens eine App zum Speichern aus
+easter_egg, Kannst du das verborgene Geheimnis entdecken? Tauche in den Quellcode ein sei der erste, der die Funktion entdeckt und integriere sie in das Tool
