--- a/locales/de.csv
+++ b/locales/de.csv
@@ -40,8 +40,8 @@ Portable_Downloads_Folder,Ordner für tragbare Downloads
 Install_msg,Sind Sie sicher  dass Sie die folgenden Anwendungen instAllieren möchten?
 Apply_msg,Sind Sie sicher dass Sie die folgenden Anpassungen anwenden möchten?
 Applying,Anwenden...
-Please_wait,Bitte warten ein Prozess läuft im Hintergrund.
+Please_wait,Bitte warten ein Prozess läuft im Hintergrund
 Last_update,Letztes Update
 Exit_msg,Sind Sie sicher dass Sie das Programm schließen möchten? Alle InstAllatiOnen werden abgebrochen.
 Empty_save_msg,Wählen Sie mindestens eine App zum Speichern aus
-easter_egg, Kannst du das verborgene Geheimnis entdecken? Tauche in den Quellcode ein sei der erste, der die Funktion entdeckt und integriere sie in das Tool
+easter_egg, Kannst du das verborgene Geheimnis entdecken? Tauche in den Quellcode ein sei der erste der die Funktion entdeckt und integriere sie in das Tool
