--- a/locales/es.csv
+++ b/locales/es.csv
@@ -32,9 +32,6 @@ Reset_preferences,Restablecer preferencias
 Reopen_itt_again,Vuelve a abrir ITT.
 Theme,Tema
 Language,Idioma
-MAS,Scripts de activación de Microsoft (MAS)
-Win_Office,Descargar ISO de Windows / Office
-IDM,Activación IDM
 Browsers_extensions,ExtensiOnes del navegador
 All,Todos
 Search,Buscar
@@ -46,7 +43,5 @@ Applying,Aplicando...
 Please_wait,Por favorespera un proceso se está ejecutando en segundo plano.
 Last_update,Última actualización
 Exit_msg,¿Estás seguro de que deseas cerrar el programa? Si hay instalaciOnes se interrumpirán.
-Happy_birthday,¡Feliz cumpleaños a mí!
-My_playlist,Es mi cumpleaños y mi lista de reproducción ♪
 Empty_save_msg,Elige al menos una aplicación para guardarla.
-easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente, sé el primero en descubrir la función e intégrala en la herramienta.
+easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente sé el primero en descubrir la función e intégrala en la herramienta.
