--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -44,4 +44,4 @@ Please_wait,Veuillez patienter
 Last_update,Dernière mise à jour  un processus est en cours d'exécutiOn en arrière-plan.
 Exit_msg,Êtes-vous sûr de vouloir fermer le programme ? Si des instAllatiOns sOnt en cours  elles serOnt interrompues
 Empty_save_msg,Choisissez au moins une applicatiOn à sauvegarder
-easter_egg, Peux-tu découvrir le secret caché ? Plonge dans le code source, sois le premier à découvrir la fonctionnalité et intègre-la dans l'outil
+easter_egg, Peux-tu découvrir le secret caché ? Plonge dans le code source sois le premier à découvrir la fonctionnalité et intègre-la dans l'outil
