--- a/locales/ga.csv
+++ b/locales/ga.csv
@@ -32,9 +32,6 @@ Reset_preferences,Athshocraigh Roghanna
 Reopen_itt_again,Oscail ITT arís le do thoil.
 Theme,Téama
 Language,Teanga
-MAS,Scripteanna Gníomhachtaithe Microsoft (MAS)
-Win_Office,Íoslódáil ISO Windows / Office
-IDM,Gníomhachtú IDM
 Browsers_extensions,Síntí Brabhsálaí
 All,Uile
 Search,Cuardaigh
@@ -46,7 +43,5 @@ Applying,Cur i bhfeidhm...
 Please_wait,Fan le do thoil tá próiseas ag rith sa chúlra
 Last_update,An nuashOnrú deireanach
 Exit_msg,An bhfuil tú cinnte gur mhaith leat an clár a dhúnadh? Má tá suiteálacha ar siúl beidh siad curtha ar ceal.
-Happy_birthday,Breithlá ShOna domsa!
-My_playlist,Is é mo Bhreithlá é agus Mo Phléaráca ♪
 Empty_save_msg,Roghnaigh ar a laghad aip amháin chun é a shábháil
-easter_egg, An féidir leat an rúndiamhair atá i bhfolach a nochtadh? Tum isteach sa chód foinse, bí an chéad duine a aimsíonn an gné agus é a chomhtháthú sa uirlis.
+easter_egg, An féidir leat an rúndiamhair atá i bhfolach a nochtadh? Tum isteach sa chód foinse bí an chéad duine a aimsíonn an gné agus é a chomhtháthú sa uirlis.
