--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -32,9 +32,6 @@ Reset_preferences,पसंद रीसेट करें
 Reopen_itt_again,कृपया इसे फिर से खोलें।
 Theme,थीम
 Language,भाषा
-MAS,माइक्रोसॉफ्ट एक्टिवेशन स्क्रिप्ट्स (MAS)
-Win_Office,विंडोज़ / ऑफिस ISO (MAS)
-IDM,IDM एक्टिवेशन (WindowsAddict)
 Browsers_extensions,ब्राउज़र एक्सटेंशन
 All,सभी
 Search,खोज
@@ -46,7 +43,5 @@ Applying,लागू किया जा रहा है...
 Please_wait,कृपया प्रतीक्षा करें बैकग्राउंड में एक प्रक्रिया चल रही है
 Last_update,आखिरी अपडेट
 Exit_msg,क्या आप निश्चित हैं कि आप प्रोग्राम बंद करना चाहते हैं? यदि कोई इंस्टॉलेशन चल रहा हो तो वह समाप्त हो जाएगा।
-Happy_birthday,मुझे जन्मदिन की शुभकामनाएँ!
-My_playlist,यह मेरा जन्मदिन है और मेरी प्लेलिस्ट ♪
 Empty_save_msg,कम से कम एक ऐप चुनें और उसे सहेजें।
-easter_egg, क्या आप छिपे हुए रहस्य को उजागर कर सकते हैं? सोर्स कोड में डूबकी लगाएं, पहले व्यक्ति बनें जो फीचर को खोजे और इसे टूल में इंटीग्रेट करें।
+easter_egg, क्या आप छिपे हुए रहस्य को उजागर कर सकते हैं? सोर्स कोड में डूबकी लगाएं पहले व्यक्ति बनें जो फीचर को खोजे और इसे टूल में इंटीग्रेट करें।
