--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -36,7 +36,7 @@ Browsers_extensions,ब्राउज़र एक्सटेंशन
 All,सभी
 Search,खोज
 Create_restore_point,पुनर्स्थापना बिंदु बनाएँ
-Portable_Downloads_Folder,पोर्टेबल डाउनलोड फ़ोल्डर,
+Portable_Downloads_Folder,पोर्टेबल डाउनलोड फ़ोल्डर
 Install_msg,क्या आप निश्चित हैं कि आप निम्न ऐप्स इंस्टॉल करना चाहते हैं?
 Apply_msg,क्या आप निश्चित हैं कि आप निम्न ट्विक्स लागू करना चाहते हैं?
 Applying,लागू किया जा रहा है...
