--- a/locales/it.csv
+++ b/locales/it.csv
@@ -32,9 +32,6 @@ Reset_preferences,Reimposta preferenze
 Reopen_itt_again,Per favore riapri di nuovo.
 Theme,Tema
 Language,Lingua
-MAS,Microsoft Activation Scripts (MAS)
-Win_Office,Windows / Office ISO (MAS)
-IDM,Attivazione IDM (WindowsAddict)
 Browsers_extensions,Estensioni per browser
 All,Tutti
 Search,Cerca
@@ -46,7 +43,5 @@ Applying,Applicazione in corso...
 Please_wait,Attendere un processo è in corso in background
 Last_update,Ultimo aggiornamento
 Exit_msg,Sei sicuro di voler chiudere il programma? Se ci sono installazioni in corso verranno terminate.
-Happy_birthday,Buon compleanno a me!
-My_playlist,È il mio compleanno e la mia playlist ♪
 Empty_save_msg,Scegli almeno un'app per salvarla.
-easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente, sii il primo a scoprire la funzionalità e integrala nello strumento.
+easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente sii il primo a scoprire la funzionalità e integrala nello strumento.
