--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -14,7 +14,7 @@ Settings,Параметры
 Save,Сохранить
 Restore,Восстановить
 Music,Музыка
-On,"Вкл "
+On,Вкл
 Off,Выкл
 Disk_Managment,Управление дисками
 Msconfig,Конфигурация системы
@@ -46,7 +46,5 @@ Applying,Применение...
 Please_wait,Подождите выполняется фоновый процесс.
 Last_update,Последнее обновление
 Exit_msg,Вы уверены что хотите закрыть программу? Все установки будут прерваны.
-Happy_birthday,С Днем Рождения меня!
-My_playlist,Это мой день рождения и мой плейлист ♪
 Empty_save_msg,Выберите хотя бы одно приложение для сохранения.
 easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код, стань первым, кто обнаружит функцию, и интегрируй её в инструмент.
