--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -43,5 +43,5 @@ Applying,Применение...
 Please_wait,Подождите выполняется фоновый процесс.
 Last_update,Последнее обновление
 Exit_msg,Вы уверены что хотите закрыть программу? Все установки будут прерваны.
-Empty_save_msg,Выберите хотя бы одно приложение для сохранения.
-easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код стань первым, кто обнаружит функцию, и интегрируй её в инструмент.
+Empty_save_msg,Выберите хотя бы одно приложение для сохранения
+easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код стань первым кто обнаружит функцию, и интегрируй её в инструмент
