--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -47,3 +47,20 @@ Last_update,آخر تحديث
 Exit_msg,هل أنت متأكد من رغبتك في إغلاق البرنامج؟ إذا كان هناك أي تثبيتات، فسيتم إيقافها.
 Empty_save_msg,يرجى اختيار تطبيق واحد على الاقل لحفظه
 easter_egg,تقدر تكتشف الميزة المخفية؟ تصفح الكود، وكن أول واحد يكتشف الميزة، ويضيفها للأداة
+system_protection,حماية النظام
+web_browsers,🌐 المتصفحات
+media,🎬 مشغل
+media_tools,🎚 أدوات الفيديو
+documents,📃 المستندات
+compression,📀 الضغط
+communication,📞 التواصل
+file_sharing,📁 مشاركة الملفات
+imaging,📷 صور
+gaming,🎮 العاب
+utilities,🔨 أدوات النظام
+disk_tools,💽 أدوات القرص
+development,👩‍💻 تطوير
+security,🛡 حماية
+portable,💼 محمولة
+runtimes,📈 مكاتب
+drivers,🔌 تعريفات
