--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -45,3 +45,20 @@ Last_update,आखिरी अपडेट
 Exit_msg,क्या आप निश्चित हैं कि आप प्रोग्राम बंद करना चाहते हैं? यदि कोई इंस्टॉलेशन चल रहा हो तो वह समाप्त हो जाएगा
 Empty_save_msg,कम से कम एक ऐप चुनें और उसे सहेजें।
 easter_egg, क्या आप छिपे हुए रहस्य को उजागर कर सकते हैं? सोर्स कोड में डूबकी लगाएं पहले व्यक्ति बनें जो फीचर को खोजे और इसे टूल में इंटीग्रेट करें
+system_protection,सिस्टम सुरक्षा
+web_browsers,🌐 वेब ब्राउज़र
+media,🎬 मीडिया
+media_tools,🎚 मीडिया उपकरण
+documents,📃 दस्तावेज़
+compression,📀 संपीड़न
+communication,📞 संचार
+file_sharing,📁 फ़ाइल साझा करना
+imaging,📷 इमेजिंग
+gaming,🎮 गेमिंग
+utilities,🔨 उपयोगिताएँ
+disk_tools,💽 डिस्क उपकरण
+development,👩‍💻 विकास
+security,🛡 सुरक्षा
+portable,💼 पोर्टेबल
+runtimes,📈 रनटाइम्स
+drivers,🔌 ड्राइवर
