--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -45,3 +45,20 @@ Last_update,Последнее обновление
 Exit_msg,Вы уверены что хотите закрыть программу? Все установки будут прерваны.
 Empty_save_msg,Выберите хотя бы одно приложение для сохранения
 easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код стань первым кто обнаружит функцию и интегрируй её в инструмент
+system_protection,Системная защита
+web_browsers,🌐 Веб-браузеры
+media,🎬 Медиа
+media_tools,🎚 Медиа-инструменты
+documents,📃 Документы
+compression,📀 Архивация
+communication,📞 Связь
+file_sharing,📁 Обмен файлами
+imaging,📷 Обработка изображений
+gaming,🎮 Игры
+utilities,🔨 Утилиты
+disk_tools,💽 Работа с дисками
+development,👩‍💻 Разработка
+security,🛡 Безопасность
+portable,💼 Портативные
+runtimes,📈 Среды выполнения
+drivers,🔌 Драйверы
