--- a/locales/de.csv
+++ b/locales/de.csv
@@ -45,3 +45,20 @@ Last_update,Letztes Update
 Exit_msg,Sind Sie sicher dass Sie das Programm schließen möchten? Alle InstAllatiOnen werden abgebrochen.
 Empty_save_msg,Wählen Sie mindestens eine App zum Speichern aus
 easter_egg, Kannst du das verborgene Geheimnis entdecken? Tauche in den Quellcode ein sei der erste der die Funktion entdeckt und integriere sie in das Tool
+system_protection, Systemschutz
+web_browsers,🌐 Webbrowser
+media,🎬 Medien
+media_tools,🎚 Medienwerkzeuge
+documents,📃 Dokumente
+compression,📀 Komprimierung
+communication,📞 Kommunikation
+file_sharing,📁 Dateifreigabe
+imaging,📷 Bildbearbeitung
+gaming,🎮 Spiele
+utilities,🔨 Dienstprogramme
+disk_tools,💽 Laufwerkswerkzeuge
+development,👩‍💻 Entwicklung
+security,🛡 Sicherheit
+portable,💼 Tragbar
+runtimes,📈 Laufzeitumgebungen
+drivers,🔌 Treiber
