--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -64,3 +64,10 @@ security,🛡 حماية
 portable,💼 محمولة
 runtimes,📈 مكاتب
 drivers,🔌 تعريفات
+privacy,🔒,الخصوصية
+fixer,🔧,المصحح
+performance,⚡,الأداء
+personalization,🎨,التخصيص
+power,🔋,الطاقة
+protection,🛡,الحماية
+classic,🕰,كلاسيكي
