--- a/locales/de.csv
+++ b/locales/de.csv
@@ -62,3 +62,10 @@ security,🛡 Sicherheit
 portable,💼 Tragbar
 runtimes,📈 Laufzeitumgebungen
 drivers,🔌 Treiber
+privacy,🔒,Datenschutz
+fixer,🔧,Reparierer
+performance,⚡,Leistung
+personalization,🎨,Personalisierung
+power,🔋,Energie
+protection,🛡,Schutz
+classic,🕰,Klassisch
