--- a/locales/en.csv
+++ b/locales/en.csv
@@ -62,3 +62,10 @@ security,🛡 Security
 portable,💼 Portable
 runtimes,📈 Runtimes
 drivers,🔌 Drivers
+privacy,🔒 Privacy
+fixer,🔧 Fixer
+performance,⚡ Performance
+personalization,🎨 Personalization
+power,🔋 Power
+protection,🛡 Protection
+classic,🕰 Classic
