--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -62,3 +62,10 @@ security,🛡 सुरक्षा
 portable,💼 पोर्टेबल
 runtimes,📈 रनटाइम्स
 drivers,🔌 ड्राइवर
+privacy,🔒,गोपनीयता
+fixer,🔧,ठीक करने वाला
+performance,⚡,प्रदर्शन
+personalization,🎨,वैयक्तिकरण
+power,🔋,शक्ति
+protection,🛡,सुरक्षा
+classic,🕰,क्लासिक
