--- a/locales/it.csv
+++ b/locales/it.csv
@@ -62,3 +62,10 @@ security,🛡 Sicurezza
 portable,💼 Portatile
 runtimes,📈 Runtime
 drivers,🔌 Driver
+privacy,🔒,Privacy
+fixer,🔧,Riparatore
+performance,⚡,Prestazioni
+personalization,🎨,Personalizzazione
+power,🔋,Potenza
+protection,🛡,Protezione
+classic,🕰,Classico
