--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -63,3 +63,10 @@ security,🛡 보안
 portable,💼 포터블
 runtimes,📈 런타임
 drivers,🔌 드라이버
+privacy,🔒,개인정보 보호
+fixer,🔧,수리공
+performance,⚡,성능
+personalization,🎨,개인화
+power,🔋,전력
+protection,🛡,보호
+classic,🕰,클래식
