--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -62,3 +62,10 @@ security,🛡 Безопасность
 portable,💼 Портативные
 runtimes,📈 Среды выполнения
 drivers,🔌 Драйверы
+privacy,🔒,Конфиденциальность
+fixer,🔧,Исправитель
+performance,⚡,Производительность
+personalization,🎨,Персонализация
+power,🔋,Мощность
+protection,🛡,Защита
+classic,🕰,Классический
