--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -63,3 +63,10 @@ security,🛡 安全
 portable,💼 便携版
 runtimes,📈 运行时
 drivers,🔌 驱动程序
+privacy,🔒,隐私
+fixer,🔧,修复工具
+performance,⚡,性能
+personalization,🎨,个性化
+power,🔋,电力
+protection,🛡,保护
+classic,🕰,经典
