--- a/locales/es.csv
+++ b/locales/es.csv
@@ -62,10 +62,10 @@ security,🛡 Seguridad
 portable,💼 Portátil
 runtimes,📈 Runtimes
 drivers,🔌 Controladores
-privacy,🔒,Privacidad
-fixer,🔧,Reparador
-performance,⚡,Rendimiento
-personalization,🎨,Personalización
-power,🔋,Potencia
-protection,🛡,Protección
-classic,🕰,Clásico
+privacy,🔒 Privacidad
+fixer,🔧 Reparador
+performance,⚡ Rendimiento
+personalization,🎨 Personalización
+power,🔋 Potencia
+protection,🛡 Protección
+classic,🕰 Clásico
