--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -62,10 +62,10 @@ security,🛡 Sécurité
 portable,💼 Portable
 runtimes,📈 Runtimes
 drivers,🔌 Pilotes
-privacy,🔒,Confidentialité
-fixer,🔧,Réparateur
-performance,⚡,Performance
-personalization,🎨,Personnalisation
-power,🔋,Puissance
-protection,🛡,Protection
-classic,🕰,Classique
+privacy,🔒 Confidentialité
+fixer,🔧 Réparateur
+performance,⚡ Performance
+personalization,🎨 Personnalisation
+power,🔋 Puissance
+protection,🛡 Protection
+classic,🕰 Classique
