--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -62,10 +62,10 @@ security,🛡 Güvenlik
 portable,💼 Taşınabilir
 runtimes,📈 Çalışma Zamanı
 drivers,🔌 Sürücüler
-privacy,🔒,Gizlilik
-fixer,🔧,Düzeltici
-performance,⚡,Performans
-personalization,🎨,Kişiselleştirme
-power,🔋,Güç
-protection,🛡,Koruma
-classic,🕰,Klasik
+privacy,🔒 Gizlilik
+fixer,🔧 Düzeltici
+performance,⚡ Performans
+personalization,🎨 Kişiselleştirme
+power,🔋 Güç
+protection,🛡 Koruma
+classic,🕰 Klasik
