--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -67,7 +67,7 @@ drivers,🔌 تعريفات
 privacy,🔒الخصوصية
 fixer,🔧المصحح
 performance,⚡الأداء
-personalization,🎨,التخصيص
+personalization,🎨 التخصيص
 power,🔋 الطاقة
 protection,🛡 الحماية
 classic,🕰 كلاسيكي
