--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -64,7 +64,7 @@ runtimes,📈 रनटाइम्स
 drivers,🔌 ड्राइवर
 privacy,🔒 गोपनीयता
 fixer,🔧 ठीक करने वाला
-performance,⚡,प रदर्शन
+performance,⚡ प रदर्शन
 personalization,🎨 वैयक्तिकरण
 power,🔋,शक्ति
 protection,🛡 सुरक्षा
