--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -35,7 +35,7 @@ Reopen_itt_again,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
 Browsers_extensions,أضافات المتصفحات
-All,الكل
+All,🏷 الكل
 Search,بحث
 Create_restore_point,إنشاء نقطة الاستعادة
 Portable_Downloads_Folder,مجلد التنزيلات المحمولة
