--- a/locales/en.csv
+++ b/locales/en.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
 Browsers_extensions,Browsers extensions
-All,All
+All,🏷 All
 Search,Search
 Create_restore_point,Create a restore point
 Portable_Downloads_Folder,Portable Downloads Folder
