--- a/locales/es.csv
+++ b/locales/es.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Vuelve a abrir ITT.
 Theme,Tema
 Language,Idioma
 Browsers_extensions,ExtensiOnes del navegador
-All,Todos
+All,🏷 Todos
 Search,Buscar
 Create_restore_point,Crear un punto de restauración
 Portable_Downloads_Folder,Carpeta de descargas portátiles
