--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Veuillez rouvrir ITT.
 Theme,Thème
 Language,Langue
 Browsers_extensions,Browsers_extensions de navigateurs
-All,Tout
+All,🏷 Tout
 Search,Rechercher
 Create_restore_point,Créer un point de restauratiOn
 Portable_Downloads_Folder,Dossier de téléchargements portables
