--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,कृपया इसे फिर से खोलें।
 Theme,थीम
 Language,भाषा
 Browsers_extensions,ब्राउज़र एक्सटेंशन
-All,सभी
+All,🏷 सभी
 Search,खोज
 Create_restore_point,पुनर्स्थापना बिंदु बनाएँ
 Portable_Downloads_Folder,पोर्टेबल डाउनलोड फ़ोल्डर
