--- a/locales/it.csv
+++ b/locales/it.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Per favore riapri di nuovo.
 Theme,Tema
 Language,Lingua
 Browsers_extensions,Estensioni per browser
-All,Tutti
+All,🏷 Tutti
 Search,Cerca
 Create_restore_point,Crea un punto di ripristino
 Portable_Downloads_Folder,Cartella download portatile
