--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -35,7 +35,7 @@ Reopen_itt_again,ITT를 다시 열어주세요.
 Theme,테마
 Language,언어
 Browsers_extensions,브라우저 확장 프로그램
-All,모두
+All,🏷 모두
 Create_restore_point,복원 지점 생성
 Portable_Downloads_Folder,휴대용 다운로드 폴더
 Install_msg,선택한 앱을 설치하시겠습니까
