--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Пожалуйста перезапустите ITT.
 Theme,Тема
 Language,Язык
 Browsers_extensions,Расширения для браузеров
-All,Все
+All,🏷 Все
 Search,Поиск
 Create_restore_point,Создать точку восстановления
 Portable_Downloads_Folder,Папка для портативных загрузок
