--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Lütfen ITT'yi tekrar açın.
 Theme,Tema
 Language,Dil
 Browsers_extensions,Tarayıcı Eklentileri
-All,Tümü
+All,🏷 Tümü
 Search,Ara
 Create_restore_point,Geri yükleme noktası oluştur
 Portable_Downloads_Folder,Taşınabilir İndirilenler Klasörü
