--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -35,7 +35,7 @@ Reopen_itt_again,请重新打开ITT。
 Theme,主题
 Language,语言
 Browsers_extensions,浏览器扩展
-All,都
+All,🏷 都
 Create_restore_point,创建还原点
 Portable_Downloads_Folder,便携下载文件夹
 Install_msg,是否要安装选定的应用
