--- a/locales/hi.csv
+++ b/locales/hi.csv
@@ -14,7 +14,7 @@ Settings,सेटिंग्स
 Save,सहेजें
 Restore,पुनर्स्थापित करें
 Music,संगीत
-On,"चालू "
+On,"चालू"
 Off,बंद
 Disk_Managment,डिस्क प्रबंधन
 Msconfig,सिस्टम कॉन्फ़िगरेशन
@@ -66,6 +66,6 @@ privacy,🔒 गोपनीयता
 fixer,🔧 ठीक करने वाला
 performance,⚡ प रदर्शन
 personalization,🎨 वैयक्तिकरण
-power,🔋,शक्ति
+power,🔋 शक्ति
 protection,🛡 सुरक्षा
 classic,🕰 क्लासिक
