--- a/locales/en.csv
+++ b/locales/en.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Please reopen itt again.
 Theme,Theme
 Language,Language
 Browsers_extensions,Browsers extensions
-All,🏷 All
+All,All
 Search,Search
 Create_restore_point,Create a restore point
 Portable_Downloads_Folder,Portable Downloads Folder
@@ -46,26 +46,26 @@ Exit_msg,Are you sure you want to close the program? Any ongoing installations w
 Empty_save_msg,Choose at least One app to save it
 easter_egg,Can you uncover the hidden secret? Dive into the source code be the first to discover the feature and integrate it into the tool
 system_protection,System protection
-web_browsers,🌐 Web Browsers
-media,🎬 Media
-media_tools,🎚 Media Tools
-documents,📃 Documents
-compression,📀 Compression
-communication,📞 Communication
-file_sharing,📁 File Sharing
-imaging,📷 Imaging
-gaming,🎮 Gaming
-utilities,🔨 Utilities
-disk_tools,💽 Disk Tools
-development,👩‍💻 Development
-security,🛡 Security
-portable,💼 Portable
-runtimes,📈 Runtimes
-drivers,🔌 Drivers
-privacy,🔒 Privacy
-fixer,🔧 Fixer
-performance,⚡ Performance
-personalization,🎨 Personalization
-power,🔋 Power
-protection,🛡 Protection
-classic,🕰 Classic
+web_browsers,Web Browsers
+media,Media
+media_tools,Media Tools
+documents,Documents
+compression,Compression
+communication,Communication
+file_sharing,File Sharing
+imaging,Imaging
+gaming,Gaming
+utilities,Utilities
+disk_tools,Disk Tools
+development,Development
+security,Security
+portable,Portable
+runtimes,Runtimes
+drivers,Drivers
+privacy,Privacy
+fixer,Fixer
+performance,Performance
+personalization,Personalization
+power,Power
+protection,Protection
+classic,Classic
