--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -35,7 +35,7 @@ Reopen_itt_again,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
 Browsers_extensions,أضافات المتصفحات
-All,🏷 الكل
+All,الكل
 Search,بحث
 Create_restore_point,إنشاء نقطة الاستعادة
 Portable_Downloads_Folder,مجلد التنزيلات المحمولة
@@ -48,26 +48,26 @@ Exit_msg,هل أنت متأكد من رغبتك في إغلاق البرنامج
 Empty_save_msg,يرجى اختيار تطبيق واحد على الاقل لحفظه
 easter_egg,تقدر تكتشف الميزة المخفية؟ تصفح الكود، وكن أول واحد يكتشف الميزة، ويضيفها للأداة
 system_protection,حماية النظام
-web_browsers,🌐 المتصفحات
-media,🎬 مشغل
-media_tools,🎚 أدوات الفيديو
-documents,📃 المستندات
-compression,📀 الضغط
-communication,📞 التواصل
-file_sharing,📁 مشاركة الملفات
-imaging,📷 صور
-gaming,🎮 العاب
-utilities,🔨 أدوات النظام
-disk_tools,💽 أدوات القرص
-development,👩‍💻 تطوير
-security,🛡 حماية
-portable,💼 محمولة
-runtimes,📈 مكاتب
-drivers,🔌 تعريفات
-privacy,🔒 الخصوصية
-fixer,🔧المصحح
-performance,⚡الأداء
-personalization,🎨 التخصيص
-power,🔋 الطاقة
-protection,🛡 الحماية
-classic,🕰 كلاسيكي
+web_browsers,المتصفحات
+media,مشغل
+media_tools,أدوات الفيديو
+documents,المستندات
+compression,الضغط
+communication,الاتصال
+file_sharing,مشاركة الملفات
+imaging,صور
+gaming,ألعاب
+utilities,أدوات النظام
+disk_tools,أدوات القرص
+development,تطوير
+security,حماية
+portable,محمولة
+runtimes,مكاتب
+drivers,تعريفات
+privacy,الخصوصية
+fixer,المصحح
+performance,الأداء
+personalization,التخصيص
+power,الطاقة
+protection,حماية
+classic,كلاسيكي
