--- a/locales/es.csv
+++ b/locales/es.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Vuelve a abrir ITT.
 Theme,Tema
 Language,Idioma
 Browsers_extensions,ExtensiOnes del navegador
-All,🏷 Todos
+All,Todos
 Search,Buscar
 Create_restore_point,Crear un punto de restauración
 Portable_Downloads_Folder,Carpeta de descargas portátiles
@@ -46,26 +46,26 @@ Exit_msg,¿Estás seguro de que deseas cerrar el programa? Si hay instalaciOnes 
 Empty_save_msg,Elige al menos una aplicación para guardarla.
 easter_egg, ¿Puedes descubrir el secreto oculto? Sumérgete en el código fuente sé el primero en descubrir la función e intégrala en la herramienta
 system_protection,Protección del sistema
-web_browsers,🌐 Navegadores web
-media,🎬 Medios
-media_tools,🎚 Herramientas multimedia
-documents,📃 Documentos
-compression,📀 Compresión
-communication,📞 Comunicación
-file_sharing,📁 Compartición de archivos
-imaging,📷 Imágenes
-gaming,🎮 Juegos
-utilities,🔨 Utilidades
-disk_tools,💽 Herramientas de disco
-development,👩‍💻 Desarrollo
-security,🛡 Seguridad
-portable,💼 Portátil
-runtimes,📈 Runtimes
-drivers,🔌 Controladores
-privacy,🔒 Privacidad
-fixer,🔧 Reparador
-performance,⚡ Rendimiento
-personalization,🎨 Personalización
-power,🔋 Potencia
-protection,🛡 Protección
-classic,🕰 Clásico
+web_browsers,Navegadores web
+media,Medios
+media_tools,Herramientas multimedia
+documents,Documentos
+compression,Compresión
+communication,Comunicación
+file_sharing,Compartición de archivos
+imaging,Imágenes
+gaming,Juegos
+utilities,Utilidades
+disk_tools,Herramientas de disco
+development,Desarrollo
+security,Seguridad
+portable,Portátil
+runtimes,Runtimes
+drivers,Controladores
+privacy,Privacidad
+fixer,Reparador
+performance,Rendimiento
+personalization,Personalización
+power,Potencia
+protection,Protección
+classic,Clásico
