--- a/locales/de.csv
+++ b/locales/de.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Bitte ITT erneut öffnen.
 Theme,Thema
 Language,Sprache
 Browsers_extensions,Browser-Erweiterungen
-All,🏷 Alle
+All,Alle
 Search,Suchen
 Create_restore_point,Wiederherstellungspunkt erstellen
 Portable_Downloads_Folder,Ordner für tragbare Downloads
