--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Veuillez rouvrir ITT.
 Theme,Thème
 Language,Langue
 Browsers_extensions,Browsers_extensions de navigateurs
-All,🏷 Tout
+All,Tout
 Search,Rechercher
 Create_restore_point,Créer un point de restauratiOn
 Portable_Downloads_Folder,Dossier de téléchargements portables
@@ -46,26 +46,26 @@ Exit_msg,Êtes-vous sûr de vouloir fermer le programme ? Si des instAllatiOns s
 Empty_save_msg,Choisissez au moins une applicatiOn à sauvegarder
 easter_egg, Peux-tu découvrir le secret caché ? Plonge dans le code source sois le premier à découvrir la fonctionnalité et intègre-la dans l'outil
 system_protection,Protection du système
-web_browsers,🌐 Navigateurs Web
-media,🎬 Médias
-media_tools,🎚 Outils multimédias
-documents,📃 Documents
-compression,📀 Compression
-communication,📞 Communication
-file_sharing,📁 Partage de fichiers
-imaging,📷 Imagerie
-gaming,🎮 Jeux
-utilities,🔨 Utilitaires
-disk_tools,💽 Outils de disque
-development,👩‍💻 Développement
-security,🛡 Sécurité
-portable,💼 Portable
-runtimes,📈 Runtimes
-drivers,🔌 Pilotes
-privacy,🔒 Confidentialité
-fixer,🔧 Réparateur
-performance,⚡ Performance
-personalization,🎨 Personnalisation
-power,🔋 Puissance
-protection,🛡 Protection
-classic,🕰 Classique
+web_browsers,Navigateurs Web
+media,Médias
+media_tools,Outils multimédias
+documents,Documents
+compression,Compression
+communication,Communication
+file_sharing,Partage de fichiers
+imaging,Imagerie
+gaming,Jeux
+utilities,Utilitaires
+disk_tools,Outils de disque
+development,Développement
+security,Sécurité
+portable,Portable
+runtimes,Runtimes
+drivers,Pilotes
+privacy,Confidentialité
+fixer,Réparateur
+performance,Performance
+personalization,Personnalisation
+power,Puissance
+protection,Protection
+classic,Classique
